--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,8 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
 }
+.dancer.bouncy{
+  border:10px solid blue;
+  border-radius:10px;
+  position:absolute;
+}
