--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,8 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
 }
+.dancer.spinny{
+  border:10px solid yellow;
+  border-radius:10px;
+  position:absolute;
+}
