--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ body{
   margin: 0px;
   background-color:#444;
   font-size: 18px;
+  background: url("img/maze.jpg") no-repeat center center fixed;
+  background-size: cover;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
@@ -13,6 +15,10 @@ body, a:link, a:visited, a:active{
   padding:5px 12px;
   float:right;
 }
+.title, .lineUpOnX, .lineUpOnY{
+  padding:5px 12px;
+  float:left;
+}
 .topbar{
   height:32px;
   background-color: #555;
@@ -20,19 +26,19 @@ body, a:link, a:visited, a:active{
 .title{
   background-color: #777;
 }
-.dancer{
-  background: red;
+.dancer.blinky{
   position:absolute;
+  background-image: url("img/blinky.gif");
 }
 .dancer.bouncy{
-  background: blue;
   position:absolute;
+  background-image: url("img/bouncy.gif");
 }
 .dancer.spinny{
-  background: yellow;
   position:absolute;
+  background-image: url("img/spinny.gif");
 }
 .dancer.random-walky{
-  background: green;
   position:absolute;
+  background-image: url("img/random.gif");
 }
