--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,64 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+
+/*********/
+/** CSS **/
+/*********/
+
 body, html{
   height:100%;
 }
 body{
   margin: 0px;
   background-color:#444;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 18px;
   background: url("img/maze.jpg") no-repeat center center fixed;
   background-size: cover;
@@ -21,24 +76,34 @@ body, a:link, a:visited, a:active{
 }
 .topbar{
   height:32px;
-  background-color: #555;
+  background-color: #35380d;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.topbar a:hover {
+  color: #e5508b;
 }
 .title{
-  background-color: #777;
+  background-color: #6b6515;
+  font-size: 18px;
 }
 .dancer.blinky{
   position:absolute;
-  background-image: url("img/blinky.gif");
+  background: url("img/blinky.gif") no-repeat center center;
+  background-size: 100%;
 }
 .dancer.bouncy{
   position:absolute;
-  background-image: url("img/bouncy.gif");
+  background: url("img/bouncy.gif") no-repeat center center;
+  background-size: 100%;
 }
 .dancer.spinny{
   position:absolute;
-  background-image: url("img/spinny.gif");
+  background: url("img/spinny.gif") no-repeat center center;
+  background-size: 100%;
 }
 .dancer.random-walky{
   position:absolute;
-  background-image: url("img/random.gif");
+  background: url("img/random.gif") no-repeat center center;
+  background-size: 100%;
+
 }
